Fix iframe not stretching

--- a/assests/css/restart.css
+++ b/assests/css/restart.css
@@ -4,3 +4,7 @@ iframe {
     border: 0;
     margin-top: -20px;
 }
+body,
+html {
+    height: 100%;
+}
